untested working version

--- a/rt/bulkmodify/browser/resources/bulk-modify.css
+++ b/rt/bulkmodify/browser/resources/bulk-modify.css
@@ -32,3 +32,15 @@
 #cellText {
 	width: 60%;
 }
+
+.substitutionMsg {
+	text-align: center;
+	vertical-align: middle;
+	font-size: 140%;
+}
+.substitutionDone {
+	color: green;	
+}
+.substitutionError {
+	color: red;
+}
