--- a/rt/bulkmodify/browser/resources/bulk-modify.css
+++ b/rt/bulkmodify/browser/resources/bulk-modify.css
@@ -44,3 +44,14 @@
 .substitutionError {
 	color: red;
 }
+
+.matchText .pre {
+	padding:0.5em;
+	background-color: red;
+	color: white;
+}
+.matchText .post {
+	padding:0.5em;
+	background-color: #71F271;
+	color: black;
+}
