some UI enhancement

--- a/rt/bulkmodify/browser/resources/bulk-modify.css
+++ b/rt/bulkmodify/browser/resources/bulk-modify.css
@@ -45,6 +45,16 @@
 	color: red;
 }
 
+.noResults {
+	font-size: 120%;
+	text-align: center;
+	font-weight: bold;
+}
+
+.possibleContentType {
+	margin-right: 1em;
+}
+
 .matchText .pre {
 	padding:0.5em;
 	background-color: red;
