--- a/rt/bulkmodify/browser/resources/bulk-modify.css
+++ b/rt/bulkmodify/browser/resources/bulk-modify.css
@@ -19,6 +19,10 @@
 	text-align: center;
 	margin: 0.5em 0em;
 }
+#loading img {
+	margin: 0em 2em;
+}
+
 #serverError {
 	font-size: 140%;
 	text-align: center;
@@ -58,6 +62,11 @@
 .noResults {
 	font-size: 120%;
 	text-align: center;
+	font-weight: bold;
+}
+
+.counter {
+	font-size: 120%;
 	font-weight: bold;
 }
 
