can now pause and continue an operation

--- a/rt/bulkmodify/browser/resources/bulk-modify.css
+++ b/rt/bulkmodify/browser/resources/bulk-modify.css
@@ -19,6 +19,9 @@
 	text-align: center;
 	margin: 0.5em 0em;
 }
+#loading td {
+	border-bottom: 1px solid #DDDDDD;
+}
 #loading img {
 	margin: 0em 2em;
 }
