JavaScript fixed and better UI in the bulk modify form

--- a/rt/bulkmodify/browser/resources/bulk-modify.css
+++ b/rt/bulkmodify/browser/resources/bulk-modify.css
@@ -55,6 +55,11 @@
 	vertical-align: middle;
 	font-size: 140%;
 }
+.substitutionMsg .discreet {
+	font-size: 70%;
+	margin-top: 0em;
+	margin-bottom: 0em;
+}
 .substitutionDone {
 	color: green;	
 }
