fixed label/checkbox bug and added a selection for all match of the document

--- a/rt/bulkmodify/browser/resources/bulk-modify.css
+++ b/rt/bulkmodify/browser/resources/bulk-modify.css
@@ -41,13 +41,17 @@
 }
 
 #cellCommands {
-	width: 5%;
+	width: 7%;
 }
 #cellDocumentInfo {
-	width: 35%;
+	width: 33%;
 }
 #cellText {
 	width: 60%;
+}
+
+.allOfTheDoc {
+	margin-left: 0.7em;
 }
 
 .substitutionMsg {
