When hovering on the select-all-match-of-document, give a visual feedback

--- a/rt/bulkmodify/browser/resources/bulk-modify.css
+++ b/rt/bulkmodify/browser/resources/bulk-modify.css
@@ -49,9 +49,14 @@
 #cellText {
 	width: 60%;
 }
+#bulkModifyForm table.listing tr.allDocFocus,
+#bulkModifyForm table.listing tr.allDocFocus td {
+	background-color: #E1F762;
+}
 
 .allOfTheDoc {
 	margin-left: 0.7em;
+	background-color: blue;
 }
 
 .substitutionMsg {
